starsight-layer-3/tests/snapshots/snapshot__snapshot_line_multi.snap
---
source: starsight-layer-3/tests/snapshot.rs
expression: svg
---
<svg height="600" viewBox="0 0 800 600" width="800" xmlns="http://www.w3.org/2000/svg">
<rect fill="#ffffff" height="540" width="720" x="60" y="20"/>
<path d="M60,560 L60,565" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="50" y="574">
0
</text>
<path d="M300,560 L300,565" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="290" y="574">
10
</text>
<path d="M540,560 L540,565" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="530" y="574">
20
</text>
<path d="M780,560 L780,565" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="770" y="574">
30
</text>
<path d="M55,560 L60,560" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="20" y="554">
2.5
</text>
<path d="M55,425 L60,425" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="20" y="419">
7.5
</text>
<path d="M55,290 L60,290" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="20" y="284">
12.5
</text>
<path d="M55,155 L60,155" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="20" y="149">
17.5
</text>
<path d="M55,20 L60,20" fill="none" stroke="#505050" stroke-width="1"/>
<text fill="#505050" font-family="sans-serif" font-size="12" x="20" y="14">
22.5
</text>
<path d="M60,560 L780,560" fill="none" stroke="#000000" stroke-width="1"/>
<path d="M60,20 L60,560" fill="none" stroke="#000000" stroke-width="1"/>
<path d="M84,290 L108,273.8 L132,249.5 L156,254.9 L180,236 L204,217.1 L228,192.8 L252,173.9 L276,155 L300,136.1 L324,144.2 L348,157.7 L372,141.5 L396,106.4 L420,74 L444,55.1 L468,65.9 L492,98.3 L516,130.7 L540,163.1 L564,146.9 L588,128 L612,109.1 L636,87.5 L660,63.2 L684,49.7 L708,60.5 L732,79.4" fill="none" stroke="#ff0000" stroke-width="2"/>
<path d="M84,514.1 L108,497.9 L132,479 L156,489.8 L180,468.2 L204,454.7 L228,438.5 L252,430.4 L276,416.9 L300,406.1 L324,411.5 L348,422.3 L372,408.8 L396,384.5 L420,354.8 L444,344 L468,352.1 L492,373.7 L516,392.6 L540,414.2 L564,403.4 L588,387.2 L612,371 L636,352.1 L660,335.9 L684,327.8 L708,338.6 L732,357.5" fill="none" stroke="#0000ff" stroke-width="2"/>
</svg>
