starsight-layer-3/tests/snapshots/snapshot__snapshot_line_nan_gaps.snap
---
source: starsight-layer-3/tests/snapshot_marks.rs
expression: bytes
extension: png
snapshot_kind: binary
---
