starsight-layer-3/tests/snapshots/snapshot__snapshot_scatter_sizes.snap
---
source: starsight-layer-3/tests/snapshot.rs
expression: bytes
extension: png
snapshot_kind: binary
---
